--- a/admin/admin_index.html
+++ b/admin/admin_index.html
@@ -195,7 +195,7 @@
         height: 50px;
         /*background-color: #777777;*/
         border-radius: 50px;
-        background-image: url("../images/user_face.png");
+        background-image: url("../images/upload/user_face.png");
         background-size: 50px 50px;
         background-repeat:no-repeat;
     }
